# multimodal-crop-agent

./: .gitignore  README.md  mermaid.txt  pyproject.toml  requirements.txt
app/: main.py  pipe.py  sample.py  streamlit_app.py
app/agent/: core.py  deps.py  tools.py
app/rag/: engine.py  ingest.py
app/vision/: clip_labels.py
notebooks/: Grounding_DINO.ipynb  dino_clip_pipeline.py  grounding_dino.py  main.py
notebooks/.ipynb_checkpoints/: Grounding_DINO-checkpoint.ipynb
report/: app.tex  data.tex  intro.tex  method.tex  ref.bib  report.aux  report.blg  report.out  report.tex  report.toc  result.tex  theory.tex  titlepage.tex  works.tex
report/images/: mermaid.txt
