[project]
name = "dino-rag-clip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "addict>=2.4.0",
    "chromadb>=1.3.5",
    "huggingface-hub>=0.36.0",
    "llama-index>=0.14.10",
    "llama-index-core>=0.14.10",
    "llama-index-embeddings-gemini>=0.4.1",
    "llama-index-embeddings-google-genai>=0.3.1",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-llms-google-genai>=0.8.0",
    "llama-index-readers-file>=0.5.5",
    "llama-index-vector-stores-chroma>=0.5.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pip>=25.3",
    "pycocotools>=2.0.10",
    "pydantic-ai-slim[google]>=1.28.0",
    "pysqlite3-binary>=0.5.4.post2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.35.0",
    "supervision>=0.22.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "yapf>=0.43.0",
]
